--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
+    "music-metadata": "^7.14.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
